syntax = "proto3";

option go_package = "schema/register";
package register;

message DataKeeperRegisterRequest {
    string ip = 1;
    string file_port = 2;
    string replication_port = 3;

}
message DataKeeperRegisterResponse {
    string data_keeper_id = 1;
    string success = 2;
}

service DataKeeperRegisterService {
    rpc Register (DataKeeperRegisterRequest) returns (DataKeeperRegisterResponse);
}


// protoc --go_out=. --go-grpc_out=.  ./schema/register/register.proto